<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <EditText
        android:id="@+id/homeworks"
        style="@style/title"
        android:inputType="none"
        android:text="@string/hw"
        tools:ignore="LabelFor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@id/homeworks"
        android:gravity="center">

        <Button
            android:id="@+id/hw1_button"
            style="@style/menu_button"
            android:text="@string/hw1" />

        <Button
            android:id="@+id/hw2_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/hw1_button"
            android:text="@string/hw2" />

        <Button
            android:id="@+id/hw3_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/hw2_button"
            android:text="@string/hw3" />

        <Button
            android:id="@+id/hw4_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/hw3_button"
            android:text="@string/hw4" />

        <Button
            android:id="@+id/hw5_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/hw4_button"
            android:text="@string/hw5" />

        <Button
            android:id="@+id/hw6_button"
            style="@style/menu_button"
            android:layout_below="@id/hw1_button"
            android:text="@string/hw6" />

        <Button
            android:id="@+id/hw7_button"
            style="@style/menu_button"
            android:layout_below="@id/hw1_button"
            android:layout_toEndOf="@id/hw6_button"
            android:text="@string/hw7" />
        <Button
            android:id="@+id/hw9_button"
            style="@style/menu_button"
            android:layout_below="@id/hw1_button"
            android:layout_toEndOf="@id/hw7_button"
            android:text="@string/hw9" />
        <Button
            android:id="@+id/hw10_button"
            style="@style/menu_button"
            android:layout_below="@id/hw1_button"
            android:layout_toEndOf="@id/hw9_button"
            android:text="@string/hw10" />
        <Button
            android:id="@+id/cw12_button"
            style="@style/menu_button"
            android:layout_below="@id/hw2_button"
            android:text="@string/hw12"
            android:layout_toEndOf="@id/hw10_button"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/greeting"
        style="@style/title"
        android:layout_centerVertical="true"
        android:inputType="none"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/classworks"
        style="@style/title"
        android:layout_alignParentBottom="true"
        android:background="@color/skyblue"
        android:inputType="none"
        android:text="@string/cw"
        android:textAllCaps="true"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_above="@id/classworks"
        android:gravity="center">

        <Button
            android:id="@+id/cw2_button"
            style="@style/menu_button"
            android:text="@string/cw2" />

        <Button
            android:id="@+id/cw3_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/cw2_button"
            android:text="@string/cw3" />

        <Button
            android:id="@+id/cw4_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/cw3_button"
            android:text="@string/cw4" />

        <Button
            android:id="@+id/cw5_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/cw4_button"
            android:text="@string/cw5" />

        <Button
            android:id="@+id/cw6_button"
            style="@style/menu_button"
            android:layout_toEndOf="@id/cw5_button"
            android:text="@string/cw6" />

        <Button
            android:id="@+id/cw7_button"
            style="@style/menu_button"
            android:layout_below="@id/cw2_button"
            android:text="@string/cw7" />
        <Button
            android:id="@+id/cw8_button"
            style="@style/menu_button"
            android:layout_below="@id/cw2_button"
            android:text="@string/cw8"
            android:layout_toEndOf="@id/cw7_button"/>
        <Button
            android:id="@+id/cw9_button"
            style="@style/menu_button"
            android:layout_below="@id/cw2_button"
            android:text="@string/cw9"
            android:layout_toEndOf="@id/cw8_button"/>

    </RelativeLayout>

</RelativeLayout>